[gd_scene load_steps=12 format=3 uid="uid://d30xmx8lo8vv8"]

[ext_resource type="Script" uid="uid://jqpsit2wgunv" path="res://hud.gd" id="1_37p78"]
[ext_resource type="Script" uid="uid://f7iht74cxv8t" path="res://dialogue_box.gd" id="2_64ctp"]
[ext_resource type="Script" uid="uid://cbj5hufv6373i" path="res://inventory_container.gd" id="3_640wx"]
[ext_resource type="Script" uid="uid://dmjal3883swwk" path="res://crafter.gd" id="4_640wx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8sq4i"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.6568171, 0.6111613, 0.2476075, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 5

[sub_resource type="Gradient" id="Gradient_8sq4i"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_640wx"]
gradient = SubResource("Gradient_8sq4i")
fill_from = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_640wx"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5
expand_margin_left = 15.0
expand_margin_right = 15.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a2258"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5
expand_margin_left = 15.0
expand_margin_right = 15.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1xsix"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.225, 0.225, 0.225, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5
expand_margin_left = 15.0
expand_margin_right = 15.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rftc2"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(1, 1, 1, 0.75)
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5
expand_margin_left = 17.0
expand_margin_top = 2.0
expand_margin_right = 17.0
expand_margin_bottom = 2.0

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_37p78")

[node name="DialogueBox" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -372.5
offset_top = -247.0
offset_right = 379.5
offset_bottom = -97.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_8sq4i")
script = ExtResource("2_64ctp")

[node name="PersonNameLabel" type="Label" parent="DialogueBox"]
layout_mode = 0
offset_left = 15.56
offset_top = 18.56
offset_right = 85.06
offset_bottom = 51.559998
rotation = -0.13962634
theme_override_font_sizes/font_size = 17

[node name="DialogueLabel" type="Label" parent="DialogueBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 22.5
offset_top = 12.0
offset_right = -22.5
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 26
text = "Woah. that is pretty neat."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="InteractionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -69.0
offset_top = -153.0
offset_right = 72.0
offset_bottom = -62.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 36
text = "Press 'E' to interact"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Inventory" type="HBoxContainer" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -248.0
offset_top = -96.0
offset_right = 248.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 10
alignment = 1
script = ExtResource("3_640wx")

[node name="Crafter" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -193.0
offset_top = -141.175
offset_right = 193.0
offset_bottom = 46.325867
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16
script = ExtResource("4_640wx")

[node name="IncorrectComboLabel" type="Label" parent="Crafter"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "hmm.. doesn't seem like i can make anything with this."

[node name="HBoxContainer" type="HBoxContainer" parent="Crafter"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 16
alignment = 1

[node name="Item1" type="TextureRect" parent="Crafter/HBoxContainer"]
layout_mode = 2
texture = SubResource("GradientTexture2D_640wx")
expand_mode = 2

[node name="Plus" type="TextureRect" parent="Crafter/HBoxContainer"]
layout_mode = 2
texture = SubResource("GradientTexture2D_640wx")
expand_mode = 2

[node name="Item2" type="TextureRect" parent="Crafter/HBoxContainer"]
layout_mode = 2
texture = SubResource("GradientTexture2D_640wx")
expand_mode = 2

[node name="Button" type="Button" parent="Crafter"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_640wx")
theme_override_styles/pressed = SubResource("StyleBoxFlat_a2258")
theme_override_styles/hover = SubResource("StyleBoxFlat_1xsix")
theme_override_styles/focus = SubResource("StyleBoxFlat_rftc2")
text = "Craft Item"
